Update about and open-graph images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
       <p>
         This is the website for Andrey Maksimov: technologist, developer and
-        author of <a
+        the author of <a
           href="https://getfrog.app/"
           class="inline-block text-lg font-medium text-skin-accent decoration-dashed underline-offset-4 focus-visible:no-underline focus-visible:underline-offset-0"
           >Frog</a
