Add yandex webmaster tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ const socialImageURL = new URL(
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="canonical" href={canonicalURL} />
+    <meta name="yandex-verification" content="9ecfc5ac00bf8300" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- General Meta Tags -->
@@ -56,7 +57,7 @@ const socialImageURL = new URL(
     <meta property="twitter:image" content={socialImageURL} />
 
     <!-- PLAUSIBLE -->
-    <script defer data-domain="meamka.me" src="https://plausible.io/js/script.js"></script>
+
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
